--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html >
+    <head>
+    <title>Design 24/7 </title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
     <body>
-        <title>Design 24/7 </title>
+        
         <header>
             <img  src="/uploads/2020/12/painter-161318_1280_0_1606929818.png"/>
             <img src="/uploads/2020/12/watercolour-4116355_1280%201_0_1606929771.png">
